--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <p class="event received">Device is Ready. Welcome to phonegap world.</p>
             </div>
         </div>
-        <script type="text/javascript" src="cordova.js"></script>
+        <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
             app.initialize();
